--- a/gts/templates/lib.html
+++ b/gts/templates/lib.html
@@ -18,7 +18,7 @@
 <script src="/static/lib/bootstrap/js/scrollspy.js" type="text/javascript"></script>
 <script src="/static/lib/bootstrap/js/tab.js" type="text/javascript"></script>
 <script src="/static/lib/bootstrap/js/transition.js" type="text/javascript"></script>
-<!--<script src="/static/lib/select2/select2.js" type="text/javascript"></script>-->
+<script src="/static/lib/select2/select2.js" type="text/javascript"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
